# landscape-of-thoughts

./: .gitignore  MANIFEST.in  PLOT-landscape.py  PLOT_consistency.py  README.md  Train_Verifier.ipynb  WHEEL_TESTING.md  anima.ipynb  animate_with_lot.py  animation.py  animation_plot.py  animation_plot_gif.py  calculate_with_lot.py  create_percentile_frames.py  create_snapshot_frames.py  main.py  plot_with_lot.py  preprocess_data.py  pyproject.toml  quick_start.ipynb  requirements.txt  sample_with_lot.py  setup.cfg  setup.py  step-1-sample-reasoning-trace.py  step-2-compute-distance-matrix.py  step-2-interthoughts-distance.py  step-3-plot-landscape.py  step_1_sample_reasoning_trace.py  step_2_compute_distance_matrix.py  step_3_plot_landscape.py  suggestion.md  train_utils.py
algorithms/: ReAct.py  __init__.py  base.py  prompt.py  utils.py
algorithms/Tree/MCTS/: base.py  mcts.py  task.py
algorithms/Tree/ToT/: base.py  bfs.py  dfs.py
algorithms/Tree/tasks/: prompts.py  science.py
algorithms/Tree/utils/: extract_both_samples.py  json_operator.py  (+5 more)
benchmarks/: BBH.py  __init__.py  base.py  gsm8k.py  long_bench.py  metrics.py  utils.py
data/: all_randomforest_records.pkl  mmlu_college_physics.json
doc/: WHEEL_TESTING.md  custom_datasets.md  setup_environment.md
examples/: custom_model_example.py  dataset_and_model_usage.py  dataset_example.py  prompt_example.py
lot/: README.md  __init__.py  analysis.py  animation.py  calculate.py  core.py  main.py  pipeline.py  requirements.txt  sample.py  setup.py  visualization.py
lot/algorithms/: __init__.py  prompt.py  utils.py
lot/data/: dummy.jsonl
lot/datasets/: README.md  __init__.py  base.py  dataset_factory.py  dataset_loader.py  examples.py  json_dataset.py  prompt.py  utils.py
lot/doc/: README_lot_examples.md  custom_datasets.md  setup_environment.md  visulization_document.md
lot/examples/: update_models.py
lot/models/: __init__.py  adapter.py  api_calling.py  base.py  utils.py
lot/visualization/: __init__.py  utils.py  visualize.py
lot/visualization_utils/: __init__.py  animate_with_lot.py  animation.py  landscape.py  plot_animation.py  utils.py
models/: __init__.py  base.py  closesource_API.py  opensource_API.py  utils.py
models/data/: togetherAI_model_infos.json
prompts/: aqua_cot.txt  aqua_tot.txt  custom_cot.txt
res/: setup_environment.md  setup_model.md
scripts/: inter-thought-ppl-llama3.1-70B.sh  landscape_llama3.1-8B-Instruct.sh
utils/: __init__.py  method_utils.py  prompt.py  similarity_utils.py  step_3_utils.py  train_utils.py  visual_utils.py
(+28 files in other folders)
